js/src/tests/test262/language/expressions/dynamic-import/syntax/valid/nested-with-empty-str-is-valid-assign-expr.js
with
(
{
}
)
{
import
(
'
'
)
;
}
reportCompare
(
0
0
)
;
