js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-with-expression-not-extensible-args.js
DONOTEVALUATE
(
)
;
with
(
import
(
'
.
/
empty_FIXTURE
.
js
'
{
}
'
'
)
)
{
}
